--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Słup stalowy H=1000" data-sku="SLP-1000" 
                    data-model="https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/primary_ion_drive.glb">
-            <div style="flex:1">
+            <div style="flex:1; min-width:180px">
               <div><strong>Słup stalowy H=1000</strong></div>
               <div class="meta">SKU: SLP-1000 • Ø 60 mm • ocynk</div>
             </div>
