--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Przęsło proste 2m" data-sku="PRZ-2000" 
                    data-model="https://threejs.org/examples/models/gltf/LeePerrySmith/LeePerrySmith.glb">
-            <div style="flex:1">
+            <div style="flex:1; min-width:180px">
               <div><strong>Przęsło proste 2m</strong></div>
               <div class="meta">SKU: PRZ-2000 • siatka 50x50 • ocynk</div>
             </div>
@@ -289,7 +289,7 @@
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Złącze kątowe 90°" data-sku="ZLK-090" 
                    data-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Duck/glTF-Binary/Duck.glb">
-            <div style="flex:1">
+            <div style="flex:1; min-width:180px">
               <div><strong>Złącze kątowe 90°</strong></div>
               <div class="meta">SKU: ZLK-090 • śruby M8 • ocynk</div>
             </div>
@@ -304,7 +304,7 @@
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Stopka montażowa 150mm" data-sku="STP-150" 
                    data-model="https://threejs.org/examples/models/gltf/Flamingo.glb">
-            <div style="flex:1">
+            <div style="flex:1; min-width:180px">
               <div><strong>Stopka montażowa 150mm</strong></div>
               <div class="meta">SKU: STP-150 • 4 otwory • ocynk</div>
             </div>
@@ -319,7 +319,7 @@
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Osłona krawędziowa" data-sku="OSL-001" 
                    data-model="https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/Parrot.glb">
-            <div style="flex:1">
+            <div style="flex:1; min-width:180px">
               <div><strong>Osłona krawędziowa</strong></div>
               <div class="meta">SKU: OSL-001 • guma + stal</div>
             </div>
