--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                    data-model="https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/primary_ion_drive.glb">
             <div style="flex:1; min-width:180px">
               <div><strong>Słup stalowy H=1000</strong></div>
-              <div class="meta">SKU: SLP-1000 • Ø 60 mm • ocynk</div>
+              <div class="meta">SKU: SLP-1000 • Ø 60 mm</div>
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
@@ -276,7 +276,7 @@
                    data-model="https://threejs.org/examples/models/gltf/LeePerrySmith/LeePerrySmith.glb">
             <div style="flex:1; min-width:180px">
               <div><strong>Przęsło proste 2m</strong></div>
-              <div class="meta">SKU: PRZ-2000 • siatka 50x50 • ocynk</div>
+              <div class="meta">SKU: PRZ-2000 • siatka 50x50</div>
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
@@ -291,7 +291,7 @@
                    data-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Duck/glTF-Binary/Duck.glb">
             <div style="flex:1; min-width:180px">
               <div><strong>Złącze kątowe 90°</strong></div>
-              <div class="meta">SKU: ZLK-090 • śruby M8 • ocynk</div>
+              <div class="meta">SKU: ZLK-090 • śruby M8</div>
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
@@ -306,7 +306,7 @@
                    data-model="https://threejs.org/examples/models/gltf/Flamingo.glb">
             <div style="flex:1; min-width:180px">
               <div><strong>Stopka montażowa 150mm</strong></div>
-              <div class="meta">SKU: STP-150 • 4 otwory • ocynk</div>
+              <div class="meta">SKU: STP-150 • 4 otwory</div>
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
